# GDP-Forecast

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
gdp_forecasting/: hooks.py  modules.txt
gdp_forecasting/base_datasets/: Annual_GrowthRates.csv  Quarterly_GrowthRates.csv  gdp.csv  workforce.csv
gdp_forecasting/config/: desktop.py  docs.py
gdp_forecasting/forecast_scripts/: arima_annual.py  arima_quarterly.py  holt_winters_annual.py  holt_winters_quarterly.py
gdp_forecasting/gdp_forecasting/: gdp_forecasting.py
gdp_forecasting/gdp_forecasting/doctype/gdp_forecasting/: gdp_forecasting.js  gdp_forecasting.json  gdp_forecasting.py  test_gdp_forecasting.py
gdp_forecasting/gdp_forecasting/module_onboarding/gdp/: gdp.json
gdp_forecasting/gdp_forecasting/module_onboarding/gdp1/: gdp1.json
gdp_forecasting/gdp_forecasting/onboarding_step/visit_gdp_app/: visit_gdp_app.json
gdp_forecasting/gdp_forecasting/report/gdp_forecasting/: gdp_forecasting.js  gdp_forecasting.json  gdp_forecasting.py
gdp_forecasting/gdp_forecasting/workspace/gdp_forecast/: gdp_forecast.json
gdp_forecasting/www/: forecast.html  forecast.js  gdp_forecast.html  upload.html  upload.js  upload.py
gdp_forecasting/www/css/: style.css  style_forecast.css  style_upload.css
